Added SCM info in POM

--- a/pom.xml
+++ b/pom.xml
@@ -110,4 +110,8 @@
     	<version>4.1.0</version>
     </dependency>
   </dependencies>
+  <scm>
+  	<connection>scm:git:git://github.com/phanigadde/hw1-pgadde.git</connection>
+  	<developerConnection>scm:git:git://github.com/phanigadde/hw1-pgadde.git</developerConnection>
+  </scm>
 </project>
