--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.cmu.lti.11791.f12.hw1</groupId>
   <artifactId>hw1-pgadde</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.2-SNAPSHOT</version>
   <repositories>
     <repository>
       <id>oaqa</id>
@@ -111,7 +111,7 @@
     </dependency>
   </dependencies>
   <scm>
-  	<connection>scm:git:git@github.com:phanigadde/hw1-pgadde.git</connection>
-  	<developerConnection>scm:git:git@github.com:phanigadde/hw1-pgadde.git</developerConnection>
+  	<connection>scm:git:git://github.com/phanigadde/hw1-pgadde.git</connection>
+  	<developerConnection>scm:git:git://github.com/phanigadde/hw1-pgadde.git</developerConnection>
   </scm>
 </project>
